Removed --nodefaults from kickstart, since it causes VM to hang on Login Service at boot after install

--- a/boxgrinder/appliance.ks.erb
+++ b/boxgrinder/appliance.ks.erb
@@ -3,7 +3,7 @@ keyboard us
 lang en_US.UTF-8
 
 # server50's /etc/sysconfig/network is overwritten by Anaconda
-network --hostname=server.localdomain --device=eth0
+#network --hostname=server.localdomain --device=eth0
 
 selinux --disabled
 timezone --utc US/Eastern
