--- a/boxgrinder/appliance.ks.erb
+++ b/boxgrinder/appliance.ks.erb
@@ -1,3 +1,5 @@
+part biosboot --fstype=biosboot --ondisk=sda --size=1
+
 <% mount_points.each do |root| %>
 <% partition = appliance_config.hardware.partitions[root]%>
 part <%= root %> --size <%= (partition['size'].to_f * 1024).to_i %> --fstype <%= root.eql?('swap') ? 'swap' : partition['type'] %> <% unless partition['options'].nil? %> --fsoptions '<%= partition['options'] %>' <% end %> --ondisk sda<% end %>
