Boxgrinder works except for graphical.target

--- a/boxgrinder/appliance50.ks.erb
+++ b/boxgrinder/appliance50.ks.erb
@@ -1,3 +1,4 @@
+bootloader --append="biosdevname=0 quiet rhgb"
 part biosboot --fstype=biosboot --ondisk=sda --size=1
 
 <% mount_points.each do |root| %>
