--- a/boxgrinder/appliance50.ks.erb
+++ b/boxgrinder/appliance50.ks.erb
@@ -7,5 +7,5 @@ part biosboot --fstype=biosboot --ondisk=sda --size=1
 <% partition = appliance_config.hardware.partitions[root]%>
 part <%= root %> --size <%= (partition['size'].to_f * 1024).to_i %> --fstype <%= root.eql?('swap') ? 'swap' : partition['type'] %> <% unless partition['options'].nil? %> --fsoptions '<%= partition['options'] %>' <% end %> --ondisk sda<% end %>
 
-<%# include base.ks %>
-<%= IO.read "#{File.expand_path(File.dirname(__FILE__))}/../kickstarts/base.ks" %>
+<%# include appliance50.ks %>
+<%= IO.read "#{File.expand_path(File.dirname(__FILE__))}/../kickstart/appliance50.ks" %>
