Added monkey patches for plugins/os/fedora/fedora-plugin.rb

--- a/boxgrinder/appliance50.ks.erb
+++ b/boxgrinder/appliance50.ks.erb
@@ -4,8 +4,9 @@ part biosboot --fstype=biosboot --ondisk=sda --size=1
 
 <%# generate partitions %>
 <% mount_points.each do |root| %>
-<% partition = appliance_config.hardware.partitions[root]%>
-part <%= root %> --size <%= (partition['size'].to_f * 1024).to_i %> --fstype <%= root.eql?('swap') ? 'swap' : partition['type'] %> <% unless partition['options'].nil? %> --fsoptions '<%= partition['options'] %>' <% end %> --ondisk sda<% end %>
+<% partition = appliance_config.hardware.partitions[root] %>
+part <%= root %> --size=<%= (partition['size'].to_f * 1024).to_i %> --fstype=<%= root.eql?('swap') ? 'swap' : partition['type'] %> <% if root.eql?('/') %> --fsoptions=grpquota,usrquota <% end %> --ondisk=sda
+<% end %>
 
 <%# include appliance50.ks %>
 <%= IO.read "#{File.expand_path(File.dirname(__FILE__))}/../kickstart/appliance50.ks" %>
