--- a/boxgrinder/appliance50.ks.erb
+++ b/boxgrinder/appliance50.ks.erb
@@ -5,7 +5,7 @@ part biosboot --fstype=biosboot --ondisk=sda --size=1
 <%# generate partitions %>
 <% mount_points.each do |root| %>
 <% partition = appliance_config.hardware.partitions[root] %>
-part <%= root %> --size=<%= (partition['size'].to_f * 1024).to_i %> --fstype=<%= root.eql?('swap') ? 'swap' : partition['type'] %> <% if root.eql?('/') %> --fsoptions=grpquota,usrquota <% end %> --ondisk=sda
+part <%= root %> --size=<%= (partition['size'].to_f * 1024).to_i %> <% if root.eql?('/') %> --fsoptions=grpquota,usrquota <% end %> --fstype=<%= root.eql?('swap') ? 'swap' : partition['type'] %> --label=<%= root %> --ondisk=sda
 <% end %>
 
 <%# include appliance50.ks %>
