--- a/boxgrinder/appliance50.ks.erb
+++ b/boxgrinder/appliance50.ks.erb
@@ -1,5 +1,5 @@
 <%# necessary but can't be represented in .appl file %>
-bootloader --append="biosdevname=0 quiet rhgb"
+<%# bootloader --append="biosdevname=0 quiet rhgb" %>
 part biosboot --fstype=biosboot --ondisk=sda --size=1
 
 <%# generate partitions %>
